--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,10 @@ Licence URI: https://www.os-templates.com/template-terms
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="/css/framework.css">
 <link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="/css/allMin.css">
+<script src="public/js/jquery.backtotop.js"></script>
+<script src="public/js/jquery.min.js"></script>
+<script src="public/js/jquery.mobilemenu.js"></script>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
@@ -158,8 +162,6 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+
 </body>
 </html>
