--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
     <div id="pageintro" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <article>
-        <p>Leo suspendisse nec urna a arcu.</p>
+        <p>Products will go here</p>
         <h3 class="heading">Lobortis gravida elementum ante non mi fusce</h3>
         <footer><a class="btn" href="#"><strong>Euismod nullam</strong></a></footer>
       </article>
