--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,15 +16,12 @@ Licence URI: https://www.os-templates.com/template-terms
 <link rel="stylesheet" href="/css/framework.css">
 <link rel="stylesheet" href="/css/styles.css">
 <link rel="stylesheet" href="/css/allMin.css">
-<script src="public/js/jquery.backtotop.js"></script>
-<script src="public/js/jquery.min.js"></script>
-<script src="public/js/jquery.mobilemenu.js"></script>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<!-- <div class="wrapper row0">
+<!--<div class="wrapper row0">
   <section id="ctdetails" class="hoc clear"> 
     
     <ul class="nospace clear">
@@ -162,6 +159,8 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-
+<script src="public/js/jquery.backtotop.js"></script>
+<script src="public/js/jquery.min.js"></script>
+<script type="text/javascript" src="public/js/jquery.mobilemenu.js"></script>
 </body>
 </html>
