--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -52,9 +52,9 @@ Licence URI: https://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <ul class="clear">
         <li class="active"><a href="/">Home</a></li>
-        <li><a class="drop" href="#">Pages</a>
+        <li><a class="drop" href="#">Catagories</a>
           <ul>
-            <li><a href="pages/gallery.html">Gallery</a></li>
+            <li><a href="pages/gallery.html"></a></li>
             <li><a href="pages/full-width.html">Full Width</a></li>
             <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
             <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
@@ -62,7 +62,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <li><a href="pages/font-icons.html">Font Icons</a></li>
           </ul>
         </li>
-        <li><a class="drop" href="#">Dropdown</a>
+        <!-- <li><a class="drop" href="#">Dropdown</a>
           <ul>
             <li><a href="#">Level 2</a></li>
             <li><a class="drop" href="#">Level 2 + Drop</a>
@@ -74,10 +74,10 @@ Licence URI: https://www.os-templates.com/template-terms
             </li>
             <li><a href="#">Level 2</a></li>
           </ul>
-        </li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
+        </li> -->
+        <!-- <li><a href="#">Link Text</a></li>
+        <li><a href="#">Link Text</a></li> -->
+        <li><a href="#">Login</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
