--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
       <article>
         <p>Products will go here</p>
         <h3 class="heading">Lobortis gravida elementum ante non mi fusce</h3>
-        <footer><a class="btn" href="#"><strong>Euismod nullam</strong></a></footer>
+        <footer><a class="btn" href="#"><strong>Bidding</strong></a>
+        <a class="btn" href="/shopping"><strong>Shopping</strong></a></footer>
       </article>
       <!-- ################################################################################################ -->
     </div>
