--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/*
+/* test
 Template Name: Pentwist
 Author: <a href="https://www.os-templates.com/">OS Templates</a>
 Author URI: https://www.os-templates.com/
