--- a/public/css/allMin.css
+++ b/public/css/allMin.css
@@ -1,3 +1,4 @@
+tes
 /*!
  * Font Awesome Free 5.2.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
