--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,8 @@ Licence URI: https://www.os-templates.com/template-terms
 File: Layout CSS
 */
 
-@import url("/public/css/allMin.css");
-@import url("/public/css/framework.css");
+@import url("/css/allMin.css");
+@import url("/css/framework.css");
 
 /* Rows
 --------------------------------------------------------------------------------------------------------------- */
