--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,19 +9,21 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
+
 <head>
-<title>uBay</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="stylesheet" href="/css/framework.css">
-<link rel="stylesheet" href="/css/styles.css">
-<link rel="stylesheet" href="/css/allMin.css">
+  <title>uBay</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="/css/framework.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/allMin.css">
 </head>
+
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!--<div class="wrapper row0">
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!--<div class="wrapper row0">
   <section id="ctdetails" class="hoc clear"> 
     
     <ul class="nospace clear">
@@ -38,31 +40,31 @@ Licence URI: https://www.os-templates.com/template-terms
     </ul>
   </section>
 </div> -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row1">
-  <header id="header" class="hoc clear">
-    <div id="logo" class="fl_left"> 
-      <!-- ################################################################################################ -->
-      <h1><a href="/">uBay</a></h1>
-      <!-- ################################################################################################ -->
-    </div>
-    <nav id="mainav" class="fl_right"> 
-      <!-- ################################################################################################ -->
-      <ul class="clear">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a class="drop" href="#">Catagories</a>
-          <ul>
-            <li><a href="pages/gallery.html"></a></li>
-            <li><a href="pages/full-width.html">Shoes</a></li>
-            <li><a href="pages/sidebar-left.html">Electronics</a></li>
-            <li><a href="pages/sidebar-right.html">Clothing</a></li>
-            <li><a href="pages/basic-grid.html">books</a></li>
-            <li><a href="pages/font-icons.html">others</a></li>
-          </ul>
-        </li>
-        <!-- <li><a class="drop" href="#">Dropdown</a>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row1">
+    <header id="header" class="hoc clear">
+      <div id="logo" class="fl_left">
+        <!-- ################################################################################################ -->
+        <h1><a href="/">uBay</a></h1>
+        <!-- ################################################################################################ -->
+      </div>
+      <nav id="mainav" class="fl_right">
+        <!-- ################################################################################################ -->
+        <ul class="clear">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a class="drop" href="#">Catagories</a>
+            <ul>
+              <li><a href="pages/gallery.html"></a></li>
+              <li><a href="pages/full-width.html">Shoes</a></li>
+              <li><a href="pages/sidebar-left.html">Electronics</a></li>
+              <li><a href="pages/sidebar-right.html">Clothing</a></li>
+              <li><a href="pages/basic-grid.html">books</a></li>
+              <li><a href="pages/font-icons.html">others</a></li>
+            </ul>
+          </li>
+          <!-- <li><a class="drop" href="#">Dropdown</a>
           <ul>
             <li><a href="#">Level 2</a></li>
             <li><a class="drop" href="#">Level 2 + Drop</a>
@@ -75,131 +77,117 @@ Licence URI: https://www.os-templates.com/template-terms
             <li><a href="#">Level 2</a></li>
           </ul>
         </li> -->
-        <!-- <li><a href="#">Link Text</a></li>
+          <!-- <li><a href="#">Link Text</a></li>
         <li><a href="#">Link Text</a></li> -->
-        
-        <!-- <li><a href="/users/login">Login</a></li> -->
 
-        <div class="login-status">
+          <!-- <li><a href="/users/login">Login</a></li> -->
           <% if (loggedIn) { %>
-          <div class="bubble logged-in">
-            Logged in as <a href="<%=`/users/${currentUser._id}`%>">
-              <%= currentUser.fullName %></a>
-          </div>
-          <div class="log-out">
-            <a href="/users/logout">Log out</a>
-          </div>
-          <div class="cart">
-            <a href="/">cart</a>
-          </div>
-          <div class="orders">
-            <a href="/">My orders</a>
-          </div>
-          <div class="profile">
-            <a href="/">My profile</a>
-          </div>
+            <li><a href="<%=`/users/${currentUser._id}`%>"> Logged in as <%= currentUser.username %></a></li>
+            <li><a href="/users/logout">Log out</a></li>
+            <li><a href="/">cart</a></li>
+            <li><a href="/">My orders</a></li>
+            <li><a href="/">My profile</a></li>
           <%} else {%>
-          <div class="bubble log-in">
             <li><a href="/users/login">Login</a></li>
-          </div>
           <% } %>
-        </div>
-      </ul>
-      <!-- ################################################################################################ -->
-    </nav>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-
-<div class="flashes">
-  <% if (flashMessages) { %>
-  <% if (flashMessages.success) { %>
-  <div class="flash success">
-    <%= flashMessages.success %>
-  </div>
-  <% } else if (flashMessages.error) { %>
-  <div class="flash error">
-    <%= flashMessages.error %>
-  </div>
-  <% } %>
-  <% } %>
-</div>
-
-<%- body %>
-<div class="wrapper row4">
-  <footer id="footer" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <div class="one_quarter first">
-      <h6 class="heading">Pentwist</h6>
-      <nav>
-        <ul class="nospace linklist">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Cookies</a></li>
-          <li><a href="#">Disclaimer</a></li>
         </ul>
+        <!-- ################################################################################################ -->
       </nav>
-    </div>
-    <div class="one_quarter">
-      <h6 class="heading">Interdum augue ut diam</h6>
-      <p class="nospace btmspace-15">Velit laoreet et scelerisque facilisis lacinia ut sapien in vehicula.</p>
-      <form action="#" method="post">
-        <fieldset>
-          <legend>Newsletter:</legend>
-          <input class="btmspace-15" type="text" value="" placeholder="Name">
-          <input class="btmspace-15" type="text" value="" placeholder="Email">
-          <button class="btn" type="submit" value="submit">Submit</button>
-        </fieldset>
-      </form>
-    </div>
-    <div class="one_quarter">
-      <h6 class="heading">Elementum ligula sed</h6>
-      <ul class="nospace linklist">
-        <li><a href="#">Feugiat odio a est</a></li>
-        <li><a href="#">Ipsum eleifend elementum nullam</a></li>
-        <li><a href="#">Vitae ligula etiam ante lectus</a></li>
-        <li><a href="#">Venenatis at auctor in</a></li>
-        <li><a href="#">Erat volutpat nulla elementum</a></li>
-      </ul>
-    </div>
-    <div class="one_quarter last">
-      <h6 class="heading">Lobortis ac velit aliquam</h6>
-      <ul class="nospace clear latestimg">
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-        <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
-      </ul>
-    </div>
-    <!-- ################################################################################################ -->
-  </footer>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
+    </header>
   </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="/js/jquery.backtotop.js"></script>
-<script src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.mobilemenu.js"></script>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+
+  <div class="flashes">
+    <% if (flashMessages) { %>
+    <% if (flashMessages.success) { %>
+    <div class="flash success">
+      <%= flashMessages.success %>
+    </div>
+    <% } else if (flashMessages.error) { %>
+    <div class="flash error">
+      <%= flashMessages.error %>
+    </div>
+    <% } %>
+    <% } %>
+  </div>
+
+  <%- body %>
+  <div class="wrapper row4">
+    <footer id="footer" class="hoc clear">
+      <!-- ################################################################################################ -->
+      <div class="one_quarter first">
+        <h6 class="heading">Pentwist</h6>
+        <nav>
+          <ul class="nospace linklist">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Cookies</a></li>
+            <li><a href="#">Disclaimer</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="one_quarter">
+        <h6 class="heading">Interdum augue ut diam</h6>
+        <p class="nospace btmspace-15">Velit laoreet et scelerisque facilisis lacinia ut sapien in vehicula.</p>
+        <form action="#" method="post">
+          <fieldset>
+            <legend>Newsletter:</legend>
+            <input class="btmspace-15" type="text" value="" placeholder="Name">
+            <input class="btmspace-15" type="text" value="" placeholder="Email">
+            <button class="btn" type="submit" value="submit">Submit</button>
+          </fieldset>
+        </form>
+      </div>
+      <div class="one_quarter">
+        <h6 class="heading">Elementum ligula sed</h6>
+        <ul class="nospace linklist">
+          <li><a href="#">Feugiat odio a est</a></li>
+          <li><a href="#">Ipsum eleifend elementum nullam</a></li>
+          <li><a href="#">Vitae ligula etiam ante lectus</a></li>
+          <li><a href="#">Venenatis at auctor in</a></li>
+          <li><a href="#">Erat volutpat nulla elementum</a></li>
+        </ul>
+      </div>
+      <div class="one_quarter last">
+        <h6 class="heading">Lobortis ac velit aliquam</h6>
+        <ul class="nospace clear latestimg">
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+          <li><a class="imgover" href="#"><img src="images/demo/100x100.png" alt=""></a></li>
+        </ul>
+      </div>
+      <!-- ################################################################################################ -->
+    </footer>
+  </div>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row5">
+    <div id="copyright" class="hoc clear">
+      <!-- ################################################################################################ -->
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/"
+          title="Free Website Templates">OS Templates</a></p>
+      <!-- ################################################################################################ -->
+    </div>
+  </div>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
+  <!-- JAVASCRIPTS -->
+  <script src="/js/jquery.backtotop.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.mobilemenu.js"></script>
 </body>
+
 </html>
