--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,8 +60,8 @@ Licence URI: https://www.os-templates.com/template-terms
               <li><a href="pages/full-width.html">Shoes</a></li>
               <li><a href="pages/sidebar-left.html">Electronics</a></li>
               <li><a href="pages/sidebar-right.html">Clothing</a></li>
-              <li><a href="pages/basic-grid.html">books</a></li>
-              <li><a href="pages/font-icons.html">others</a></li>
+              <li><a href="">books</a></li>
+              <li><a href="/">others</a></li>
             </ul>
           </li>
           <!-- <li><a class="drop" href="#">Dropdown</a>
@@ -81,15 +81,29 @@ Licence URI: https://www.os-templates.com/template-terms
         <li><a href="#">Link Text</a></li> -->
 
           <!-- <li><a href="/users/login">Login</a></li> -->
-          <% if (loggedIn) { %>
-            <li><a href=""> Logged in as <%= currentUser.username %></a></li>
+
+            
+          <% if (loggedIn && currentUser.email=="admin@gmail.com") { %> -->
+            <li><a href="">logged in as admin <%= currentUser.username %></a></li>
             <li><a href="/users/logout">Log out</a></li>
-            <li><a href="/">cart</a></li>
-            <li><a href="/">My orders</a></li>
-            <li><a href="<%=`/users/${currentUser._id}`%>">My profile</a></li>
-          <%} else {%>
-            <li><a href="/users/login">Login</a></li>
+            <li><a href="/">Approve BID</a></li>
+            <li><a href="/">Approve products</a></li>
+            <li><a href="<%=`/users/${currentUser._id}`%>">Admin profile</a></li>
+          <%} else {      %>
+          
+              <% if (loggedIn && currentUser.email!="admin@gmail.com") {
+                console.log(currentUser.email); %>
+                <li><a href=""> Logged in as <%= currentUser.username %></a></li>
+                <li><a href="/users/logout">Log out</a></li>
+                <li><a href="/">cart</a></li>
+                <li><a href="/">My orders</a></li>
+                <li><a href="<%=`/users/${currentUser._id}`%>">My profile</a></li>
+              <%} else {%>
+                <li><a href="/users/login">Login</a></li>
+              <% } %>
           <% } %>
+
+          
         </ul>
         <!-- ################################################################################################ -->
       </nav>
