--- a/views/shopping/sell.ejs
+++ b/views/shopping/sell.ejs
@@ -13,8 +13,17 @@
         <label for="inputPrice">price</label>
         <input type="number" name="price" id="inputPrice" class="form-control" placeholder="Price" required>
 
-        <label for="inputCategory">Category</label>
-        <input type="text" name="category" id="inputCategory" class="form-control" placeholder="Category" required>
+        <!-- <label for="inputCategory">Category</label>
+        <input type="text" name="category" id="inputCategory" class="form-control" placeholder="Category" required> -->
+
+        <label for="inputCatagory">Catagory</label>
+        <select name="category" id="inputCatagory" class="form-control" placeholder="Category" required>
+            <option value="Shoes">Shoes</option>
+            <option value="Electronics">Electronics</option>
+            <option value="Clothing">Clothing</option>
+            <option value="Books">Books</option>
+            <option value="Other">Other</option>
+        </select>
 
         <!-- <label for="inputImage">Image</label>    
         <input type="file" id="image" name="image" class="form-control" value="" required> -->
