--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,7 +8,7 @@
                         required>
                     <label for="inputPassword">Password</label>
                     <input name="password" id="inputPassword"
-                        placeholder="Password" required>
+                        placeholder="Password" type="password" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
                 </form>
                 <p>Not a user? Sign-up now!</p>
