--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -54,13 +54,13 @@ Licence URI: https://www.os-templates.com/template-terms
         <!-- ################################################################################################ -->
         <ul class="clear">
           <li><a href="/">Home</a></li>
-          <li><a class="drop" href="#">Catagories</a>
+          <li><a class="drop" href="#">Categories</a>
             <ul>
-              <li><a href="pages/full-width.html">Shoes</a></li>
-              <li><a href="pages/sidebar-left.html">Electronics</a></li>
-              <li><a href="pages/sidebar-right.html">Clothing</a></li>
-              <li><a href="">Books</a></li>
-              <li><a href="/">Others</a></li>
+              <li><a href="/category/Shoes">Shoes</a></li>
+              <li><a href="/category/Electronics">Electronics</a></li>
+              <li><a href="/category/Clothing">Clothing</a></li>
+              <li><a href="/category/Books">Books</a></li>
+              <li><a href="/category/Other">Others</a></li>
             </ul>
           </li>
 
