--- a/views/bidding/index.ejs
+++ b/views/bidding/index.ejs
@@ -16,7 +16,7 @@
     </tr>
   </thead>
   <tbody>
-    <% product.forEach(product => { %>
+    <% products.forEach(product => { %>
     <tr>
       <td>
         <a >
