--- a/views/shopping/index.ejs
+++ b/views/shopping/index.ejs
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      <% product.forEach(product => { %>
+      <% products.forEach(product => { %>
       <tr>
         <td>
           <a>
