--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,7 +69,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li><a href="">logged in as<%= currentUser.username %></a>
             <ul>
               <li><a href="/">Approve Products</a></li>
-              <li><a href="/">Approve BID</a></li>
+              <li><a href="/admin">Approve BID</a></li>
               <li><a href="<%=`/users/${currentUser._id}`%>">Admin profile</a></li>
             </ul>
           </li>
