--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,38 +1,46 @@
 <h2>Admin  Table</h2>
-<div class="center">
-  <a class="button" href="/users/new">Create User</a>
-</div>
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Zip Code</th>
-      <th>Edit</th>
-      <th>Delete</th>
+      <th>productName</th>
+      <th>description</th>
+      <th>price</th>
+      <th>category</th>
+      <th>Approve </th>
+      <th>Disapprove</th>
     </tr>
   </thead>
   <tbody>
-    <% products.forEach(product => { %>
+    <% console.log(product) %>
+    <% product.forEach(products => {   %>
+      
     <tr>
       <td>
-        <a href="<%= `/users/${user._id}` %>">
-          <%= user.Name %>
+        
+          <%= products.productName %>
         </a>
       </td>
       <td>
-        <%= user.email %>
+        <%= products.description %>
       </td>
       <td>
-        <%= user.zipCode %>
+        <%= products.price %>
       </td>
       <td>
-        <a href="<%=`/users/${user._id}/edit`%>">
-          Edit
+        <%= products.category %>
+      </td>
+      <td>
+        <%= products.price %>
+      </td>
+      <td>
+        <a href="<%=`/admin/${products._id}/approve`%>">
+          click to approve
         </a>
       </td>
       <td>
-        <a href="<%=`/users/${user._id}/delete?_method=DELETE` %>" onclick="return confirm('Are you sure you want to delete this record?')">Delete</a>
+        <a href="<%=`/admin/${products._id}/disapprove`%>">
+          click to disapprove
+        </a>
       </td>
     </tr>
     <% }); %>
