updated admin page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -68,8 +68,8 @@ Licence URI: https://www.os-templates.com/template-terms
           <% if (loggedIn && currentUser.isAdmin) { %>
           <li><a href="">logged in as<%= currentUser.username %></a>
             <ul>
-              <li><a href="/">Approve Products</a></li>
-              <li><a href="/admin">Approve BID</a></li>
+              <li><a href="/admin/shopping">Approve Products</a></li>
+              <li><a href="/admin/bidding">Approve BID</a></li>
               <li><a href="<%=`/users/${currentUser._id}`%>">Admin profile</a></li>
             </ul>
           </li>
