--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       <article>
         <p>Welcome to our website !!</p>
         <h3 class="heading"> Shopping or Bidding ....?</h3>
-        <footer><a class="btn" href="/bidding"><strong>Bidding</strong></a>
+        <footer><a class="btn" href="/bidding"><strong>Auctions</strong></a>
         <a class="btn" href="/shopping"><strong>Shopping</strong></a></footer>
       </article>
       <!-- ################################################################################################ -->
