--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,62 +1,59 @@
 <h1>User Data for
-    <%= user.username %>
-  </h1>
-  <table class="table">
-    <tr>
-      <th>first Name</th>
-      <td>
-        <%= user.name.first %>
-      </td>
-    </tr>
-    <tr>
-        <th>last Name</th>
-        <td>
-          <%= user.name.last %>
-        </td>
-      </tr>
-    <tr>
-      <th>Email</th>
-      <td>
-        <%= user.email %>
-      </td>
-    </tr>
-    <tr>
-        <th>username</th>
-        <td>
-          <%= user.username %>
-        </td>
-     </tr>
-     <tr>
-        <th>Phone</th>
-        <td>
-          <%= user.phoneNumber %>
-        </td>
-      </tr>
-      <tr> address</tr>
-      <tr>
-        <th>street</th>
-        <td>
-          <%= user.address.street %>
-        </td>
-      </tr>
-      <tr>
-        <th>city</th>
-        <td>
-          <%= user.address.city %>
-        </td>
-      </tr>
-      
-    <tr>
-      <th>Zip Code</th>
-      <td>
-        <%= user.address.zipCode%>
-      </td>
-    </tr>
-  </table>
-  <div>
-    <a class="button" href="<%=`/users/${user._id}/edit`%>">
-      Edit User Details
-    </a>
-  </div>
-  
-  
+  <%= user.username %>
+</h1>
+<table class="table">
+  <tr>
+    <th>First Name</th>
+    <td>
+      <%= user.name.first %>
+    </td>
+  </tr>
+  <tr>
+    <th>Last Name</th>
+    <td>
+      <%= user.name.last %>
+    </td>
+  </tr>
+  <tr>
+    <th>Email</th>
+    <td>
+      <%= user.email %>
+    </td>
+  </tr>
+  <tr>
+    <th>Username</th>
+    <td>
+      <%= user.username %>
+    </td>
+  </tr>
+  <tr>
+    <th>Phone</th>
+    <td>
+      <%= user.phoneNumber %>
+    </td>
+  </tr>
+  <tr>Address</tr>
+  <tr>
+    <th>Street</th>
+    <td>
+      <%= user.address.street %>
+    </td>
+  </tr>
+  <tr>
+    <th>City</th>
+    <td>
+      <%= user.address.city %>
+    </td>
+  </tr>
+  <tr>
+    <th>Zip Code</th>
+    <td>
+      <%= user.address.zipCode%>
+    </td>
+  </tr>
+</table>
+<div>
+  <a class="btn btn-lg btn-primary btn-block" href="<%=`/users/${user._id}/edit`%>">
+    Edit User Details
+  </a>
+</div>
