--- a/views/shopping/index.ejs
+++ b/views/shopping/index.ejs
@@ -43,11 +43,14 @@
 
 
 <h1><span>Product Gallery</span></h1>
+
 <ul class="gallery">
   <% products.forEach(product => { %>
-  <li>
-    <p>test</p>
-    <img src="./images/nikeGolf.jpg" alt="">
-  </li>
+  <div class="pic-tile">
+    <li>
+      <p>test</p>
+      <img src="./images/nikeGolf.jpg" alt="">
+    </li>
+  </div>
   <% }); %>
 </ul>
