still implementing cart

--- a/views/bidding/index.ejs
+++ b/views/bidding/index.ejs
@@ -47,7 +47,7 @@
         <%= product.category %>
       </td>
       <td>
-        <a href="<%=`/bidding/${product._id}/placeBid`%>">
+        <a href="<%=`/bidding/${product._id}/${product.currentPrice}/placeBid`%>">
           Place BID
         </a>
       </td>
