--- a/views/shopping/cart.ejs
+++ b/views/shopping/cart.ejs
@@ -11,7 +11,7 @@
       <th>Description</th>
       <th>Price</th>
       <th>Category</th>
-      <th>Cart</th>
+      <th>Buy</th>
     </tr>
   </thead>
   <tbody>
@@ -36,8 +36,8 @@
       </td>
 
       <td>
-        <a href="<%=`/shopping/${product._id}/addToCart`%>">
-          Add to Cart
+        <a href="<%=`/shopping/${product._id}/buy`%>">
+          Buy
         </a>
       </td>
     </tr>
