--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,7 +83,7 @@ Licence URI: https://www.os-templates.com/template-terms
               <li><a href="/">My Orders</a></li>
             </ul>
           </li>
-          <li><a href="/">cart</a></li>
+          <li><a href="/shopping/cart">cart</a></li>
           <li><a href="/users/logout">Log out</a></li>
           </li>
 
