--- a/views/shopping/cart.ejs
+++ b/views/shopping/cart.ejs
@@ -17,11 +17,11 @@
   <tbody>
     <% products.forEach(product => { %>
     <tr>
-      <td> 
-            <img src="images/<%= product.imageUrl %>" width="20" height="20">
+      <td>
+        <img class="gallery" class="pic-tile" src="images/<%= product.imageUrl %>">
       </td>
       <td>
-          <%= product.productName %>
+        <%= product.productName %>
       </td>
       <td>
         <%= product.description %>
