last changes before bed

--- a/views/shopping/cart.ejs
+++ b/views/shopping/cart.ejs
@@ -1,7 +1,4 @@
-<h> Wanna sell something?</h>
-<a class="btn btn-lg btn-primary btn-block" href="/shopping/sell">Click here !!</a>
-
-<h2>Product Table</h2>
+<h2>Cart</h2>
 
 <table class="table">
   <thead>
