bidding logic implemented

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -80,7 +80,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li><a href=""> Logged in as <%= currentUser.username %></a>
             <ul>
               <li><a href="<%=`/users/${currentUser._id}`%>">My Profile</a></li>
-              <li><a href="/">My Orders</a></li>
+              <li><a href="/shopping/orders">My Orders</a></li>
             </ul>
           </li>
           <li><a href="/shopping/cart">cart</a></li>
