--- a/views/bidding/index.ejs
+++ b/views/bidding/index.ejs
@@ -12,6 +12,7 @@
       <th>Base Price</th>
       <th>current Bidding Price</th>
       <th>Time left</th>
+      <th>Last Bidder</th>
       <th>Category</th>
     </tr>
   </thead>
@@ -43,6 +44,15 @@
         %>
         <%= hours %> hours and <%= min %> minutes
       </td>
+      <% if(product.username_bid){ %>
+      <td>
+        <%= product.username_bid %>
+      </td>
+      <% }else{ %>
+        <td>
+          No bid yet
+        </td>
+      <% } %>
       <td>
         <%= product.category %>
       </td>
