--- a/views/shopping/cart.ejs
+++ b/views/shopping/cart.ejs
@@ -39,4 +39,4 @@
     <% }); %>
   </tbody>
 </table>
-<% products.forEach(product => { console.log(product)})%>
+<% products.forEach(product => { console.log("image/", product.imageUrl)})%>
