--- a/views/shopping/index.ejs
+++ b/views/shopping/index.ejs
@@ -19,6 +19,7 @@
     <tr>
       <td>
         <img class="gallery" class="pic-tile" src="images/<%= product.imageUrl %>">
+        <%console.log(product.imageUrl)%>
       </td>
       <td>
         <a>
