updating categories and cart pictures

--- a/views/bidding/index.ejs
+++ b/views/bidding/index.ejs
@@ -20,7 +20,7 @@
     <% products.forEach(product => { %>
     <tr>
       <td>
-          <img src="images/<%= product.imageUrl %>" width="10" height="10">
+          <img class="gallery" class="pic-tile" src="images/<%= product.imageUrl %>">
       </td>
       <td>
         <a>
