--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -66,7 +66,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 
           <% if (loggedIn && currentUser.isAdmin) { %>
-          <li><a href="">logged in as<%= currentUser.username %></a>
+          <li><a href="">logged in as <%= currentUser.username %></a>
             <ul>
               <li><a href="/admin/shopping">Approve Products</a></li>
               <li><a href="/admin/bidding">Approve BID</a></li>
@@ -117,10 +117,9 @@ Licence URI: https://www.os-templates.com/template-terms
   </div>
 
   <%- body %>
-  <div class="wrapper row4">
+  <!-- <div class="wrapper row4">
     <footer id="footer" class="hoc clear">
-      <!-- ################################################################################################ -->
-      <div class="one_quarter first">
+      <!--<div class="one_quarter first">
         <h6 class="heading">uBay</h6>
         <nav>
           <ul class="nospace linklist">
@@ -144,9 +143,8 @@ Licence URI: https://www.os-templates.com/template-terms
           </fieldset>
         </form>
       </div>
-      <!-- ################################################################################################ -->
     </footer>
-  </div>
+  </div> -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
